@@ -33,6 +33,18 @@ test01()
   VERIFY( exists(path{"."}) );
   VERIFY( exists(path{".."}) );
   VERIFY( exists(std::experimental::filesystem::current_path()) );
+
+  std::error_code ec = std::make_error_code(std::errc::invalid_argument);
+  VERIFY( exists(path{"/"}, ec) );
+  VERIFY( !ec );
+  VERIFY( exists(path{"/."}, ec) );
+  VERIFY( !ec );
+  VERIFY( exists(path{"."}, ec) );
+  VERIFY( !ec );
+  VERIFY( exists(path{".."}, ec) );
+  VERIFY( !ec );
+  VERIFY( exists(std::experimental::filesystem::current_path(), ec) );
+  VERIFY( !ec );
 }
 
 void
@@ -40,6 +52,10 @@ test02()
 {
   path rel = __gnu_test::nonexistent_path();
   VERIFY( !exists(rel) );
+
+  std::error_code ec = std::make_error_code(std::errc::invalid_argument);
+  VERIFY( !exists(rel, ec) );
+  VERIFY( !ec ); // DR 2725
 }
 
 void
@@ -47,6 +63,38 @@ test03()
 {
   path abs = absolute(__gnu_test::nonexistent_path());
   VERIFY( !exists(abs) );
+
+  std::error_code ec = std::make_error_code(std::errc::invalid_argument);
+  VERIFY( !exists(abs, ec) );
+  VERIFY( !ec ); // DR 2725
+}
+
+void
+test04()
+{
+  using perms = std::experimental::filesystem::perms;
+  path p = __gnu_test::nonexistent_path();
+  create_directory(p);
+  permissions(p, perms::all | perms::remove_perms);
+
+  auto unr = p / "unreachable";
+  std::error_code ec;
+  VERIFY( !exists(unr, ec) );
+  VERIFY( ec == std::errc::permission_denied );
+  ec.clear();
+  try
+  {
+    exists(unr);
+  }
+  catch(const std::experimental::filesystem::filesystem_error& ex)
+  {
+    ec = ex.code();
+    VERIFY( ex.path1() == unr );
+  }
+  VERIFY( ec == std::errc::permission_denied );
+
+  permissions(p, perms::owner_all);
+  remove(p);
 }
 
 int
@@ -55,4 +103,5 @@ main()
   test01();
   test02();
   test03();
+  test04();
 }
